--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// 프로젝트의 플러그인 의존성 관리를 위한 설정
 buildscript{
     // ext : build.gradle에서 사용하는 '전역변수'를 설정하겠다는 의미
     ext{
@@ -20,7 +21,7 @@ plugins {
     id 'io.spring.dependency-management' version('1.0.10.RELEASE')// 스프링부트의 의존성들을 관리하는 플러그인(필수)
 }
 group 'com.practice.book'
-version '1.0.4-SNAPSHOT-'+ new Date().format("yyyyMMddHHmmss")
+version '1.0.4-SNAPSHOT-'+ new Date().format("yyyyMMddHHm  n  mss")
 sourceCompatibility = 1.8
 
 repositories {
